--- a/package.json
+++ b/package.json
@@ -79,40 +79,44 @@
   "dependencies": {
     "@expo/config-plugins": "54.0.1",
     "@expo/vector-icons": "15.0.2",
-    "@react-navigation/native": "6.1.18",
     "@react-navigation/core": "6.4.17",
-    "@react-navigation/routers": "6.1.9",
+    "@react-navigation/devtools": "7.0.28",
+    "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
+    "@react-navigation/routers": "6.1.9",
+    "@reduxjs/toolkit": "2.5.0",
+    "@sentry/react-native": "6.20.0",
+    "apisauce": "3.2.0",
+    "axios": "1.10.0",
     "expo": "54.0.13",
     "expo-asset": "12.0.9",
+    "expo-build-properties": "1.0.9",
     "expo-constants": "18.0.9",
     "expo-font": "14.0.9",
+    "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "8.0.8",
-    "expo-system-ui": "6.0.7",
+    "expo-localization": "17.0.7",
+    "expo-media-library": "~18.2.0",
     "expo-router": "6.0.12",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.4",
-    "react-native-mmkv": "3.3.3",
-    "react-native-permissions": "5.4.0",
-    "react-i18next": "15.0.1",
+    "expo-system-ui": "6.0.7",
     "formik": "2.4.6",
     "i18next": "23.14.0",
     "lodash": "4.17.21",
-    "@reduxjs/toolkit": "2.5.0",
-    "apisauce": "3.2.0",
-    "axios": "1.10.0",
-    "@sentry/react-native": "6.20.0",
+    "patch-package": "8.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-i18next": "15.0.1",
+    "react-native": "0.81.4",
     "react-native-gesture-handler": "2.28.0",
+    "react-native-mmkv": "3.3.3",
+    "react-native-permissions": "5.4.0",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "4.16.0",
-    "patch-package": "8.0.0",
+    "react-native-view-shot": "4.0.3",
     "react-redux": "9.2.0",
     "redux-persist": "6.0.0",
-    "@react-navigation/devtools": "7.0.28",
-    "yup": "1.4.0",
-    "expo-localization": "17.0.7",
-    "expo-build-properties": "1.0.9"
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.27.1",
@@ -122,22 +126,22 @@
     "@types/react-test-renderer": "18.3.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "reactotron-react-native": "5.1.15",
-    "reactotron-redux": "3.2.0",
+    "cspell": "6.31.3",
     "eslint": "8.57.0",
-    "eslint-import-resolver-typescript": "3.6.3",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-react-native": "4.1.0",
-    "eslint-plugin-import": "2.29.1",
     "eslint-config-expo": "7.1.2",
     "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.3",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react-native": "4.1.0",
     "expo-dev-client": "6.0.15",
     "husky": "8.0.3",
-    "cspell": "6.31.3",
-    "prettier": "3.3.3",
     "jest-expo": "54.0.12",
+    "prettier": "3.3.3",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "5.1.15",
+    "reactotron-redux": "3.2.0",
     "typescript": "5.8.3"
   },
   "resolutions": {
