--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,7 @@
   },
   "build": {
     "base": {
-      "node": "20.11.1",
+      "node": "20.19.4",
       "ios": {
         "resourceClass": "m-medium"
       },
@@ -33,7 +33,8 @@
       "distribution": "internal",
       "env": {
         "NODE_ENV": "production"
-      }
+      },
+      "autoIncrement": true
     }
   },
   "submit": {
