--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "expo-media-library": "~18.2.0",
     "expo-router": "6.0.12",
     "expo-system-ui": "6.0.7",
+    "expo-updates": "~29.0.12",
     "formik": "2.4.6",
     "i18next": "23.14.0",
     "lodash": "4.17.21",
