--- a/eas.json
+++ b/eas.json
@@ -17,7 +17,11 @@
       "extends": "base",
       "distribution": "internal",
       "developmentClient": true,
+      "android": {
+        "image": "latest"
+      },
       "ios": {
+        "image": "latest",
         "simulator": true
       },
       "channel": "development"
