--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-view-shot": "4.0.3",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "9.2.0",
     "redux-persist": "6.0.0",
